2003-5-31   Andrew H. Chatham <pyogg@andrewchatham.com>
	* pyvorbisinfo.c (py_comment_subscript) Applied patch from Brian
	Warner to fix a bug where I wasn't clearing the Python error
	correctly in unicode conversion.

	* pyvorbisinfo.c (write_comments) Applied patch from Csaba Henk to
	fix comment modification in Windows.
	
2003-5-13   Andrew H. Chatham <pyogg@andrewchatham.com>
	* pyvorbisinfo.c (py_info_new): Applied patch from 
	Andrew Mahone to allow negative quality values
	* pyvorbisfile.c (is_big_endian): Use runtime endian test rather
	than try to figure out where everyone keeps endian.h
	* pyvorbiscodec.c (py_dsp_write_wav): Applied patch from Andrew
	Mahone to fix a truncation bug with weird wav files.
	
2003-2-07   Andrew H. Chatham <pyogg@andrewchatham.com>
	* Applied another patch from Nicodemus to fix things windows. Pass
	the "b" flag to all file open commands.
	
2003-1-18   Andrew H. Chatham <pyogg@andrewchatham.com>
	* Applied a patch from Nicodemus <nicodemus@globalite.com.br> to 
	get this to build on windows.
	
2002-09-24  Andrew H. Chatham <pyogg@andrewchatham.com>
	* Changes from Neil Blakey-Milner
	* setup.py - fixed regular expression
	* pyvorbisfile.c: Used more portable endian-test code.
	
2002-09-12  Andrew H. Chatham <pyogg@andrewchatham.com>
	* pyvorbisinfo.c: (assign_tag) Removed a printf I accidentally
	left in there.
	
2002-09-12  Andrew H. Chatham <pyogg@andrewchatham.com>
	* setup.py: Bumped to version 1.1 (may not release until I verify
	another bug report)

	
	* pyvorbisinfo.c: (py_comment_new_empty) Made static and fixed the
	case when using unicode strings with VorbisComment. Also now
	capitalize the key for comments.
	
	* pyvorbisfile.c: Added patch so that passing in PyFile objects to
	a VorbisFile object won't _necessarily_ crash and burn, though
	it's still not a good idea. A much better way of doing this is the
	next planned feature.
	
2002-07-23  Andrew H. Chatham <andrew@andrewchatham.com>